--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "hardhat": "^2.22.17"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.2.0"
+    "@openzeppelin/contracts": "^5.2.0",
+    "next": "^13.0.0", 
+    "react": "^18.0.0", 
+    "react-dom": "^18.0.0" 
   }
 }
